--- a/book.html
+++ b/book.html
@@ -81,7 +81,7 @@
                     <textarea class="form-control" id="userRemarks" rows="3"></textarea>
                 </div>
                 <div class="mx-auto mt-2">
-                    <button type="button" class="btn btn-primary float-right" id="bookNowBtn">Book Now</button>
+                    <button type="button" class="btn btn-primary btn-lg" id="bookNowBtn">Book Now</button>
                 </div>
             </div>
         </div>
