--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold"></h1>
                 <p class="col-md-8 fs-4">Click the button below to place your order</p>
-                <button class="btn btn-primary btn-lg" type="button" href="book.html">Place Order</button>
+                <a class="btn btn-primary btn-lg" role="button" href="book.html">Place Order</a>
            </div>
        </div>
     </div>
