Revert "minor fixes"
This reverts commit d60099cae2efc3b7eb6a1771ec9cb8d4f2754c44.

--- a/list.html
+++ b/list.html
@@ -43,7 +43,7 @@
         <!-- Booking List -->
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-primary btn-lg" id="refreshNowBtn">Refresh Now</button>
+                <button type="button" class="btn btn-warning" id="refreshNowBtn">Refresh Now</button>
                     <table class="table table-striped" id="bookingNameList">
                         <thead>
                             <tr>
