--- a/book.html
+++ b/book.html
@@ -42,49 +42,46 @@
         </div>
         <!-- Booking Form -->
         <div class="row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="userName">Name</label>
-                    <input type="text" class="form-control" id="userName">
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group">
-                    <label for="userEmail">Email</label>
-                    <input type="text" class="form-control" id="userEmail">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="userPax">Pax</label>
-                    <select class="form-control" id="userPax">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div clas="row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="userRemarks">Remarks</label>
-                    <textarea class="form-control" id="userRemarks" rows="3"></textarea>
-                </div>
-                <div class="mx-auto mt-2">
-                    <button type="button" class="btn btn-primary btn-lg" id="bookNowBtn">Book Now</button>
-                </div>
-            </div>
-        </div>
+          <div class="col">
+              <div class="form-group">
+                  <label for="userName">Name</label>
+                  <input type="text" class="form-control" id="userName">
+              </div>
+          </div>
+          <div class="col">
+              <div class="form-group">
+                  <label for="userEmail">Email address</label>
+                  <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
+                  <small id="emailHelp" class="form-text text-muted">This email is for our reservation listing</small>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col">
+              <div class="form-group">
+                  <label for="userPax">Pax</label>
+                  <select class="form-control" id="userPax">
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                      <option>7</option>
+                      <option>8</option>
+                      <option>9</option>
+                      <option>10</option>
+                  </select>
+              </div>
+          </div>
+          <div class="col">
+              <div class="form-group">
+                  <label for="userRemarks">Remarks</label>
+                  <textarea class="form-control" id="userRemarks" rows="3"></textarea>
+              </div>
+              <button type="button" class="btn btn-primary float-right" id="bookNow">Book Now</button>
+          </div>
+      </div>
     </div>
 
     <script src="js/book.js"></script>
